--- a/social_media/home/templates/home/index.html
+++ b/social_media/home/templates/home/index.html
@@ -37,6 +37,8 @@
 				<a href="#/" class="fa fa-search"></a>
 			</form>
 		</div>
+
+{#        ------------------menu-------------------#}
 		<nav id="menu" class="res-menu">
 			<ul>
 				<li><span>Home</span>
@@ -140,6 +142,7 @@
 				<li><a href="widgets.html" title="">Widgts</a></li>
 			</ul>
 		</nav>
+
 		<nav id="shoppingbag">
 			<div>
 				<div class="">
@@ -300,7 +303,7 @@
 							</li>
 							<li>
 								<a href="notifications.html" title="">
-									<img src="{% static 'winku-ltr/images/resources/thumb-2.jpg"' %}" alt="">
+									<img src="{% static 'winku-ltr/images/resources/thumb-2.jpg' %}" alt="">
 									<div class="mesg-meta">
 										<h6>Jhon doe</h6>
 										<span>Hi, how r u dear ...?</span>
@@ -311,7 +314,7 @@
 							</li>
 							<li>
 								<a href="notifications.html" title="">
-									<img src="images/resources/thumb-3.jpg" alt="">
+									<img src="{% static 'images/resources/thumb-3.jpg' %}" alt="">
 									<div class="mesg-meta">
 										<h6>Andrew</h6>
 										<span>Hi, how r u dear ...?</span>
@@ -353,7 +356,7 @@
 						<ul class="drops-menu">
 							<li>
 								<a href="notifications.html" title="">
-									<img src="images/resources/thumb-1.jpg" alt="">
+									<img src="{% static 'images/resources/thumb-1.jpg' %}" alt="">
 									<div class="mesg-meta">
 										<h6>sarah Loren</h6>
 										<span>Hi, how r u dear ...?</span>
@@ -364,7 +367,7 @@
 							</li>
 							<li>
 								<a href="notifications.html" title="">
-									<img src="images/resources/thumb-2.jpg" alt="">
+									<img src="{% static 'images/resources/thumb-2.jpg' %}" alt="">
 									<div class="mesg-meta">
 										<h6>Jhon doe</h6>
 										<span>Hi, how r u dear ...?</span>
@@ -375,7 +378,7 @@
 							</li>
 							<li>
 								<a href="notifications.html" title="">
-									<img src="images/resources/thumb-3.jpg" alt="">
+									<img src="{% static 'images/resources/thumb-3.jpg' %}" alt="">
 									<div class="mesg-meta">
 										<h6>Andrew</h6>
 										<span>Hi, how r u dear ...?</span>
@@ -386,7 +389,7 @@
 							</li>
 							<li>
 								<a href="notifications.html" title="">
-									<img src="images/resources/thumb-4.jpg" alt="">
+									<img src="{% static 'images/resources/thumb-4.jpg' %}" alt="">
 									<div class="mesg-meta">
 										<h6>Tom cruse</h6>
 										<span>Hi, how r u dear ...?</span>
@@ -397,7 +400,7 @@
 							</li>
 							<li>
 								<a href="notifications.html" title="">
-									<img src="images/resources/thumb-5.jpg" alt="">
+									<img src="{% static 'images/resources/thumb-5.jpg' %}" alt="">
 									<div class="mesg-meta">
 										<h6>Amy</h6>
 										<span>Hi, how r u dear ...?</span>
@@ -420,7 +423,7 @@
 				</li>
 			</ul>
 			<div class="user-img">
-				<img src="images/resources/admin.jpg" alt="">
+				<img src="{% static 'images/resources/admin.jpg' %}" alt="">
 				<span class="status f-online"></span>
 				<div class="user-setting">
 					<a href="#" title=""><span class="status f-online"></span>online</a>
@@ -439,7 +442,7 @@
 		
 	<section>
 		<div class="feature-photo">
-			<figure><img src="images/resources/timeline-1.jpg" alt=""></figure>
+			<figure><img src="{% static 'images/resources/timeline-1.jpg' %}" alt=""></figure>
 			<div class="add-btn">
 				<span>1205 followers</span>
 				<a href="#" title="" data-ripple="">Add Friend</a>
@@ -456,7 +459,7 @@
 					<div class="col-lg-2 col-sm-3">
 						<div class="user-avatar">
 							<figure>
-								<img src="images/resources/user-avatar.jpg" alt="">
+								<img src="{% static 'images/resources/user-avatar.jpg' %}" alt="">
 								<form class="edit-phto">
 									<i class="fa fa-camera-retro"></i>
 									<label class="fileContainer">
@@ -591,35 +594,35 @@
 										<h4 class="widget-title">Who's follownig</h4>
 										<ul class="followers">
 											<li>
-												<figure><img src="images/resources/friend-avatar2.jpg" alt=""></figure>
+												<figure><img src="{% static 'images/resources/friend-avatar2.jpg' %}" alt=""></figure>
 												<div class="friend-meta">
 													<h4><a href="time-line.html" title="">Kelly Bill</a></h4>
 													<a href="#" title="" class="underline">Add Friend</a>
 												</div>
 											</li>
 											<li>
-												<figure><img src="images/resources/friend-avatar4.jpg" alt=""></figure>
+												<figure><img src="{% static 'images/resources/friend-avatar4.jpg' %}" alt=""></figure>
 												<div class="friend-meta">
 													<h4><a href="time-line.html" title="">Issabel</a></h4>
 													<a href="#" title="" class="underline">Add Friend</a>
 												</div>
 											</li>
 											<li>
-												<figure><img src="images/resources/friend-avatar6.jpg" alt=""></figure>
+												<figure><img src="{% static 'images/resources/friend-avatar6.jpg' %}" alt=""></figure>
 												<div class="friend-meta">
 													<h4><a href="time-line.html" title="">Andrew</a></h4>
 													<a href="#" title="" class="underline">Add Friend</a>
 												</div>
 											</li>
 											<li>
-												<figure><img src="images/resources/friend-avatar8.jpg" alt=""></figure>
+												<figure><img src="{% static 'images/resources/friend-avatar8.jpg' %}" alt=""></figure>
 												<div class="friend-meta">
 													<h4><a href="time-line.html" title="">Sophia</a></h4>
 													<a href="#" title="" class="underline">Add Friend</a>
 												</div>
 											</li>
 											<li>
-												<figure><img src="images/resources/friend-avatar3.jpg" alt=""></figure>
+												<figure><img src="{% static 'images/resources/friend-avatar3.jpg' %}" alt=""></figure>
 												<div class="friend-meta">
 													<h4><a href="time-line.html" title="">Allen</a></h4>
 													<a href="#" title="" class="underline">Add Friend</a>
@@ -634,7 +637,7 @@
 									<div class="central-meta new-pst item">
 										<div class="new-postbox">
 											<figure>
-												<img src="images/resources/admin2.jpg" alt="">
+												<img src="{% static 'images/resources/admin2.jpg' %}" alt="">
 											</figure>
 											<div class="newpst-input">
 												<form method="post">
@@ -678,7 +681,7 @@
 										<div class="user-post">
 											<div class="friend-info">
 												<figure>
-													<img src="images/resources/friend-avatar10.jpg" alt="">
+													<img src="{% static 'images/resources/friend-avatar10.jpg' %}" alt="">
 												</figure>
 												<div class="friend-name">
 													<ins><a href="time-line.html" title="">Arezoo Hosseini </a></ins>
@@ -692,7 +695,7 @@
 													</div>
 												<div class="post-meta">
 													<div class="linked-image align-left">
-														<a href="#" title=""><img src="images/resources/page1.jpg" alt=""></a>
+														<a href="#" title=""><img src="{% static 'images/resources/page1.jpg' %}" alt=""></a>
 													</div>
 													<div class="detail">
 														<span>Love Maid - ChillGroves</span>
@@ -769,14 +772,14 @@
 										<div class="user-post">
 											<div class="friend-info">
 												<figure>
-													<img src="images/resources/friend-avatar10.jpg" alt="">
+													<img src="{% static 'images/resources/friend-avatar10.jpg' %}" alt="">
 												</figure>
 												<div class="friend-name">
 													<ins><a href="time-line.html" title="">Arezoo Hosseini </a></ins>
 													<span>published: june,2 2021 19:PM</span>
 												</div>
 												<div class="post-meta">
-													<img src="images/resources/user-post.jpg" alt="">
+													<img src="{% static 'images/resources/user-post.jpg' %}" alt="">
 													<div class="we-video-info">
 														<ul>
 															
@@ -851,7 +854,7 @@
 												<ul class="we-comet">
 													<li>
 														<div class="comet-avatar">
-															<img src="images/resources/comet-1.jpg" alt="">
+															<img src="{% static 'images/resources/comet-1.jpg' %}" alt="">
 														</div>
 														<div class="we-comment">
 															<div class="coment-head">
@@ -864,7 +867,7 @@
 														<ul>
 															<li>
 																<div class="comet-avatar">
-																	<img src="images/resources/comet-2.jpg" alt="">
+																	<img src="{% static 'images/resources/comet-2.jpg' %}" alt="">
 																</div>
 																<div class="we-comment">
 																	<div class="coment-head">
@@ -877,7 +880,7 @@
 															</li>
 															<li>
 																<div class="comet-avatar">
-																	<img src="images/resources/comet-3.jpg" alt="">
+																	<img src="{% static 'images/resources/comet-3.jpg' %}" alt="">
 																</div>
 																<div class="we-comment">
 																	<div class="coment-head">
@@ -892,7 +895,7 @@
 													</li>
 													<li>
 														<div class="comet-avatar">
-															<img src="images/resources/comet-4.jpg" alt="">
+															<img src="{% static 'images/resources/comet-4.jpg' %}" alt="">
 														</div>
 														<div class="we-comment">
 															<div class="coment-head">
@@ -910,7 +913,7 @@
 													</li>
 													<li class="post-comment">
 														<div class="comet-avatar">
-															<img src="images/resources/comet-1.jpg" alt="">
+															<img src="{% static 'images/resources/comet-1.jpg' %}" alt="">
 														</div>
 														<div class="post-comt-box">
 															<form method="post">
@@ -944,7 +947,7 @@
 										<div class="user-post">
 											<div class="friend-info">
 												<figure>
-													<img src="images/resources/friend-avatar10.jpg" alt="">
+													<img src="{% static 'images/resources/friend-avatar10.jpg' %}" alt="">
 												</figure>
 												<div class="friend-name">
 													<ins><a href="time-line.html" title="">Arezoo Hosseini </a></ins>
@@ -1026,7 +1029,7 @@
 												<ul class="we-comet">
 													<li>
 														<div class="comet-avatar">
-															<img src="images/resources/comet-1.jpg" alt="">
+															<img src="{% static 'images/resources/comet-1.jpg' %}" alt="">
 														</div>
 														<div class="we-comment">
 															<div class="coment-head">
@@ -1040,7 +1043,7 @@
 													</li>
 													<li>
 														<div class="comet-avatar">
-															<img src="images/resources/comet-2.jpg" alt="">
+															<img src="{% static 'images/resources/comet-2.jpg' %}" alt="">
 														</div>
 														<div class="we-comment">
 															<div class="coment-head">
@@ -1058,7 +1061,7 @@
 													</li>
 													<li class="post-comment">
 														<div class="comet-avatar">
-															<img src="images/resources/comet-2.jpg" alt="">
+															<img src="{% static 'images/resources/comet-2.jpg' %}" alt="">
 														</div>
 														<div class="post-comt-box">
 															<form method="post">
@@ -1094,9 +1097,30 @@
 								<aside class="sidebar static">
 									<div class="widget">
 										<div class="banner medium-opacity bluesh">
+
+
+
+
+
+
+{#                                            ------------------------buuuuuuuuuuuug------------------------------------------------------------------#}
 											<div style="background-image: url(images/resources/baner-widgetbg.jpg)" class="bg-image"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 											<div class="baner-top">
-												<span><img src="images/book-icon.png" alt=""></span>
+												<span><img src="{% static 'images/book-icon.png' %}" alt=""></span>
 												<i class="fa fa-ellipsis-h"></i>
 											</div>
 											<div class="banermeta">
@@ -1114,7 +1138,7 @@
 										<ul id="people-list" class="friendz-list">
 											<li>
 												<figure>
-													<img src="images/resources/friend-avatar.jpg" alt="">
+													<img src="{% static 'images/resources/friend-avatar.jpg' %}" alt="">
 													<span class="status f-online"></span>
 												</figure>
 												<div class="friendz-meta">
@@ -1124,7 +1148,7 @@
 											</li>
 											<li>
 												<figure>
-													<img src="images/resources/friend-avatar2.jpg" alt="">
+													<img src="{% static 'images/resources/friend-avatar2.jpg' %}" alt="">
 													<span class="status f-away"></span>
 												</figure>
 												<div class="friendz-meta">
@@ -1134,7 +1158,7 @@
 											</li>
 											<li>
 												<figure>
-													<img src="images/resources/friend-avatar3.jpg" alt="">
+													<img src="{% static 'images/resources/friend-avatar3.jpg' %}" alt="">
 													<span class="status f-off"></span>
 												</figure>
 												<div class="friendz-meta">
@@ -1144,7 +1168,7 @@
 											</li>
 											<li>
 												<figure>
-													<img src="images/resources/friend-avatar4.jpg" alt="">
+													<img src="{% static 'images/resources/friend-avatar4.jpg' %}" alt="">
 													<span class="status f-off"></span>
 												</figure>
 												<div class="friendz-meta">
@@ -1155,7 +1179,7 @@
 											<li>
 												
 												<figure>
-													<img src="images/resources/friend-avatar5.jpg" alt="">
+													<img src="{% static 'images/resources/friend-avatar5.jpg' %}" alt="">
 													<span class="status f-online"></span>
 												</figure>
 												<div class="friendz-meta">
@@ -1166,7 +1190,7 @@
 											<li>
 												
 												<figure>
-													<img src="images/resources/friend-avatar6.jpg" alt="">
+													<img src="{% static 'images/resources/friend-avatar6.jpg' %}" alt="">
 													<span class="status f-away"></span>
 												</figure>
 												<div class="friendz-meta">
@@ -1177,7 +1201,7 @@
 											<li>
 												
 												<figure>
-													<img src="images/resources/friend-avatar7.jpg" alt="">
+													<img src="{% static 'images/resources/friend-avatar7.jpg' %}" alt="">
 													<span class="status f-off"></span>
 												</figure>
 												<div class="friendz-meta">
@@ -1188,7 +1212,7 @@
 											<li>
 												
 												<figure>
-													<img src="images/resources/friend-avatar5.jpg" alt="">
+													<img src="{% static 'images/resources/friend-avatar5.jpg' %}" alt="">
 													<span class="status f-online"></span>
 												</figure>
 												<div class="friendz-meta">
@@ -1199,7 +1223,7 @@
 											<li>
 												
 												<figure>
-													<img src="images/resources/friend-avatar2.jpg" alt="">
+													<img src="{% static 'images/resources/friend-avatar2.jpg' %}" alt="">
 													<span class="status f-away"></span>
 												</figure>
 												<div class="friendz-meta">
@@ -1220,7 +1244,7 @@
 											<div class="chat-list">
 												<ul>
 													<li class="me">
-														<div class="chat-thumb"><img src="images/resources/chatlist1.jpg" alt=""></div>
+														<div class="chat-thumb"><img src="{% static 'images/resources/chatlist1.jpg' %}" alt=""></div>
 														<div class="notification-event">
 															<span class="chat-message-item">
 																Hi James! Please remember to buy the food for tomorrow! I’m gonna be handling the gifts and Jake’s gonna get the drinks
@@ -1229,7 +1253,7 @@
 														</div>
 													</li>
 													<li class="you">
-														<div class="chat-thumb"><img src="images/resources/chatlist2.jpg" alt=""></div>
+														<div class="chat-thumb"><img src="{% static 'images/resources/chatlist2.jpg' %}" alt=""></div>
 														<div class="notification-event">
 															<span class="chat-message-item">
 																Hi James! Please remember to buy the food for tomorrow! I’m gonna be handling the gifts and Jake’s gonna get the drinks
@@ -1238,7 +1262,7 @@
 														</div>
 													</li>
 													<li class="me">
-														<div class="chat-thumb"><img src="images/resources/chatlist1.jpg" alt=""></div>
+														<div class="chat-thumb"><img src="{% static 'images/resources/chatlist1.jpg' %}" alt=""></div>
 														<div class="notification-event">
 															<span class="chat-message-item">
 																Hi James! Please remember to buy the food for tomorrow! I’m gonna be handling the gifts and Jake’s gonna get the drinks
@@ -1429,8 +1453,8 @@
 		</form>
 	</div><!-- side panel -->		
 	
-	<script src="js/main.min.js"></script>
-	<script src="js/script.js"></script>
+	<script src="{% static 'js/main.min.js' %}"></script>
+	<script src="{% static 'js/script.js' %}"></script>
 
 </body>	
 </html>
