--- a/social_media/user/templates/user/register.html
+++ b/social_media/user/templates/user/register.html
@@ -43,8 +43,12 @@
                             <button type="submit" class="form-control btn btn-primary rounded submit px-3">Register</button>
                         </div>
                         <div class="form-group d-md-flex">
-                            <div class="w-50 text-md-right">
-                                <a href="#">Already have an account? Login</a>
+                            <div class="form-group text-center mt-3">
+                                <p>
+                                    Already have an account?
+                                    <a href="{% url 'user:login' %}">Login</a>
+                                </p>
+
                             </div>
                         </div>
                     </form>
