--- a/social_media/home/templates/home/index.html
+++ b/social_media/home/templates/home/index.html
@@ -458,24 +458,31 @@
 				<div class="row merged">
 					<div class="col-lg-2 col-sm-3">
 						<div class="user-avatar">
-							<figure>
-								<img src="{% static 'images/resources/user-avatar.jpg' %}" alt="">
-								<form class="edit-phto">
-									<i class="fa fa-camera-retro"></i>
-									<label class="fileContainer">
-										Edit Display Photo
-										<input type="file"/>
-									</label>
-								</form>
-							</figure>
+							{% if user.is_authenticated %}
+                                <figure>
+                                {% if user.avatar %}
+                                    <img src="{{ user.avatar.url }}" alt="">
+                                {% else %}
+                                    <img src="{% static 'images/resources/user-avatar.png' %}" alt="">
+
+                                {% endif %}
+
+                                    <form class="edit-phto">
+                                        <i class="fa fa-camera-retro"></i>
+                                        <label class="fileContainer">
+                                            Edit Display Photo
+                                            <input type="file"/>
+                                        </label>
+                                    </form>
+                                </figure>
+                            {% endif %}
 						</div>
 					</div>
 					<div class="col-lg-10 col-sm-9">
 						<div class="timeline-info">
 							<ul>
 								<li class="admin-name">
-								  <h5>Arezoo Hosseini </h5>
-								  <span>Group Admin</span>
+								  <h5>{{ request.user.username }}</h5>
 								</li>
 								<li>
 									<a class="active" href="time-line.html" title="" data-ripple="">time line</a>
