--- a/social_media/home/templates/home/index.html
+++ b/social_media/home/templates/home/index.html
@@ -442,7 +442,11 @@
 		
 	<section>
 		<div class="feature-photo">
-			<figure><img src="{% static 'images/resources/timeline-1.jpg' %}" alt=""></figure>
+        {% if user.banner %}
+			<figure><img src="{{ user.banner.url }}" alt=""></figure>
+        {% else %}
+			<figure><img src="{% static 'images/resources/timeline-gray.jpg' %}" alt=""></figure>
+        {% endif %}
 			<div class="add-btn">
 				<span>1205 followers</span>
 				<a href="#" title="" data-ripple="">Add Friend</a>
