--- a/social_media/assets/winku-ltr/css/style.css
+++ b/social_media/assets/winku-ltr/css/style.css
@@ -1322,8 +1322,10 @@ header.sticky {
 
 .new-postbox {
     display: inline-block;
-    width: 100%;
+    width: 100%; /* یا اندازه دلخواه دیگر */
 }
+
+
 
 .new-postbox > figure {
     display: inline-block;
